Finished (still a few bugs)

--- a/Calculator.html
+++ b/Calculator.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html>
-
-
-
+<head></head>
 <link rel="stylesheet" href="style.css">
-
+<body>
 <div id="outer">
+
         <div id="screen" class="screen">
                 <div id="screentop"></div>
                 <div id="screenbottom"></div>
         </div>
 
-        <div id="btn1" class="btn">1</div>
-        <div id="btn2" class="btn">2</div>
-        <div id="btn3" class="btn">3</div>
-        <div id="btn4" class="btn">4</div>
-        <div id="btn5" class="btn">5</div>
-        <div id="btn6" class="btn">6</div>
-        <div id="btn7" class="btn">7</div>
-        <div id="btn8" class="btn">8</div>
-        <div id="btn9" class="btn">9</div>
-        <div id="btn0" class="btn">0</div>
-        <div id="btndot" class="btn">.</div>
-        <div id="btneq" class="btn">=</div>
-        <div id="btndiv" class="btn">%</div>
-        <div id="btnx" class="btn">x</div>
-        <div id="btnmin" class="btn">-</div>
-        <div id="btnadd" class="btn">+</div>
-        <div id="btnbck" class="btn">bck</div>
-        <div id="btnc" class="btn">ac</div>
+        <div id="btn1" class="btn" onclick="calc(1)">1</div>
+        <div id="btn2" class="btn" onclick="calc(2)">2</div>
+        <div id="btn3" class="btn" onclick="calc(3)">3</div>
+        <div id="btn4" class="btn" onclick="calc(4)">4</div>
+        <div id="btn5" class="btn" onclick="calc(5)">5</div>
+        <div id="btn6" class="btn" onclick="calc(6)">6</div>
+        <div id="btn7" class="btn" onclick="calc(7)">7</div>
+        <div id="btn8" class="btn" onclick="calc(8)">8</div>
+        <div id="btn9" class="btn" onclick="calc(9)">9</div>
+        <div id="btn0" class="btn" onclick="calc(0)">0</div>
+        <div id="btndot" class="btn" onclick="calc('.')">.</div>
+        <div id="btneq" class="btn" onclick="calc('=')">=</div>
+        <div id="btndiv" class="btn" onclick="calc('/')">÷</div>
+        <div id="btnx" class="btn" onclick="calc('x')">×</div>
+        <div id="btnmin" class="btn" onclick="calc('-')">-</div>
+        <div id="btnadd" class="btn" onclick="calc('+')">+</div>
+        <div id="btnbck" class="btn" onclick="calc('b')">⯇</div>
+        <div id="btnc" class="btn" onclick="calc('c')">ac</div>
+        
 </div>
-
+</body>
 <script src="script.js"></script>
 
 </html>
